# icon-core

./: NOTICE  pyproject.toml
configs/model/: deeponet.yaml
docs/: README.md  cite.bib
docs/skills/git/: SKILL.md
docs/skills/reference/: SKILL.md
docs/skills/workflow/: SKILL.md
src/models/icon/: icon.py
src/models/nop/: deeponet.py  fno.py
src/models/vicon/: vicon.py
